Bug 488307 - Widget-specific icons are mostly no longer seen (e.g. in Widget Explorer and Alternatives dialog)
Summary: Widget-specific icons are mostly no longer seen (e.g. in Widget Explorer and ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-stable-Plasma/6.1
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-06-10 14:47 UTC by Nate Graham
Modified: 2024-06-13 07:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Missing in Alternatives dialog (97.17 KB, image/png)
2024-06-10 14:47 UTC, Nate Graham
Details
Mostly missing in Widget Explorer (330.60 KB, image/png)
2024-06-10 14:47 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-06-10 14:47:10 UTC
Created attachment 170344 [details]
Missing in Alternatives dialog

STEPS TO REPRODUCE
1. Right-click Kickoff > Show Alternatives OR Right-click panel > Add Widgets


OBSERVED RESULT
Almost all widgets are missing their custom icons (e.g. Kickoff does not show the `org.kde.plasma.kickoff` icon, insyead showing the generic `start-here-kde-plasma` icon


EXPECTED RESULT
Any widgets with custom icons show them


ADDITIONAL INFORMATION
This is a recent regression which started happening only a few days ago. I thought https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4393 looked suspicious but unfortunately plasma-workspace does not build with it reverted, so I couldn't test that.
Comment 1 Nate Graham 2024-06-10 14:47:27 UTC
Created attachment 170345 [details]
Mostly missing in Widget Explorer
Comment 2 Nicolas Fella 2024-06-10 14:51:14 UTC
"Almost all" seems a bit of an overstatement. As far as I can tell it affects only the three launcher icons?
Comment 3 Nate Graham 2024-06-10 15:04:04 UTC
In Widget explorer, only the Activity Pager and Folder View widgets show their widget-specific icons. All the others don't get shown. You can open up Icon Explorer and search for "org.kde.plasma." to see all the other icons that should be shown there but aren't.
Comment 4 Nicolas Fella 2024-06-10 15:14:07 UTC
Okay, I see where the change comes from. It's the inversion of the 

    if (QIcon::hasThemeIcon(info.pluginId())) {
        setIcon(QIcon::fromTheme(info.pluginId()));
    } else if (!m_info.iconName().isEmpty()) {
        setIcon(QIcon::fromTheme(info.iconName()));
    }

check. Now the Icon= value from the metadata is perferred over the plugin id as icon name
Comment 5 Bug Janitor Service 2024-06-10 15:21:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4442
Comment 6 Fushan Wen 2024-06-13 07:07:24 UTC
Git commit 3fc0ef5ef629c17ae354ffffa333446ce2eaf1c9 by Fushan Wen, on behalf of Nicolas Fella.
Committed on 13/06/2024 at 07:06.
Pushed by fusionfuture into branch 'master'.

[widgetsexplorer] Prefer applet id as icon name again

We have special icons with the applet id as name

bd4f0684e089f2585264fd9e46d245c20fd05004 changed the logic to prefer the icon name from the metadata again, but we want to use those special icons instead

M  +4    -6    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3fc0ef5ef629c17ae354ffffa333446ce2eaf1c9
Comment 7 Fushan Wen 2024-06-13 07:07:47 UTC
Git commit 175b6b6ce3affec08c0325b9e793513491eb380e by Fushan Wen.
Committed on 13/06/2024 at 07:07.
Pushed by fusionfuture into branch 'Plasma/6.1'.

[widgetsexplorer] Prefer applet id as icon name again

We have special icons with the applet id as name

bd4f0684e089f2585264fd9e46d245c20fd05004 changed the logic to prefer the icon name from the metadata again, but we want to use those special icons instead


(cherry picked from commit 3fc0ef5ef629c17ae354ffffa333446ce2eaf1c9)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +4    -6    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/175b6b6ce3affec08c0325b9e793513491eb380e