[widgetsexplorer] Prefer applet id as icon name again

We have special icons with the applet id as name

bd4f0684e089f2585264fd9e46d245c20fd05004 changed the logic to prefer the icon name from the metadata again, but we want to use those special icons instead

BUG: 488307


(cherry picked from commit 3fc0ef5ef629c17ae354ffffa333446ce2eaf1c9)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>